--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 
     <div class="row">
    
-      <div style="align-items: center; margin-bottom:5%; display: flex; justify-content: center;">
+      <div style="align-items: center; margin-bottom:5%; display: flex; justify-content: start; margin-left:3%">
     <span style="color:white; font-size:40px; font-weight: 200;">EQUIPE</span></div>
       
     <!-- Line -->
@@ -441,11 +441,6 @@
 
 <!-- FOOTER -->                            
 <footer id="section_6" style="background-color:  #16263e; min-height: 90vh; overflow:hidden;">
-
-  <!-- Line -->
-    <div class="w-75 justify-content-center mx-auto mt-4" style="background-color:rgb(255, 255, 255)">
-        <hr style="border: 1px solid white; margin-top:1%;">
-      </div>
 
   <!-- Seção com colunas centralizadas -->
   <section class="container">
