--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
     
   <!-- BODY -->
-  <body id="section_1" style="padding-top:40px; font-family: 'Poppins', sans-serif;">
+  <body id="section_1" style="margin-top:8vh; font-family: 'Poppins', sans-serif;">
       
   <!-- HEADER -->
   <header>  
