--- a/index.html
+++ b/index.html
@@ -444,13 +444,13 @@
 <footer id="section_6" style="background-color:  #16263e; min-height: 600px; overflow:hidden;">
 
 
-  <!-- Seção com colunas centralizadas -->
+  <!-- NOSSO LOCAL/FALE CONOSCO Cols -->
   <section class="container">
       <div class="row" style="margin-top:3%; display: flex; padding:0;">
   
 
       <!-- Coluna: Nosso Local -->
-      <div class="col-lg-4 text-white mb-4" style="font-family:'Lato', sans-serif; margin:0;">
+      <div class="col-lg-4 text-white mb-4" style="font-family:'Lato', sans-serif; margin:auto;">
         <span class="text-white mb-3" style="font-weight: 350; font-size:30px;">Nosso Local</span>
         <div style="line-height: 0.8; margin-top:15%;" class="NossoLocal">
           <p>SHN, Quadra 1, Bloco A - Asa Norte</p>
@@ -460,7 +460,7 @@
       </div>
 
       <!-- Coluna: Fale Conosco -->
-      <div class="col-lg-3 text-white mb-4" style="font-family:'Lato', sans-serif; margin:0;">
+      <div class="col-lg-3 text-white mb-4" style="font-family:'Lato', sans-serif; margin:auto;">
         <span class="text-white mb-3" style="font-weight: 350; font-size:30px;">Fale Conosco</span>
         
         <div style="margin-top:18%; line-height: 1.8;" class="FaleConosco">
