--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             <img src="Alexandre.webp" alt="José Alexandre Monteiro Fortes" loading="lazy" class="img-fluid">
           </div>
           <span class="mb-1 EQUIPE_title">José Alexandre Monteiro Fortes</span>
-          <span class="EQUIPE_text">Engenheiro civil, com especialização em recursos hídricos na Escola de Engenharia de São Carlos - EESC/USP, e cursos de Auditoria Ambiental / ISO 14.000 (certificação EARA) e de Regulação Econômica do Setor Saneamento (OXERA / FGV – EPGE). Experiência na coordenação de estudos ambientais em área portuária. Há cerca de 15 anos, além das atividades junto a NCA, presta consultoria ao Banco Mundial – BIRD e ao BID na fase de preparação e negociação de projetos junto a governos federal, estaduais e municipais.</span>
+          <span class="EQUIPE_text">Engenheiro Civil, com especialização em recursos hídricos na Escola de Engenharia de São Carlos - EESC/USP, e cursos de Auditoria Ambiental / ISO 14.000 (certificação EARA) e de Regulação Econômica do Setor Saneamento (OXERA / FGV – EPGE). Experiência na coordenação de estudos ambientais em área portuária. Há cerca de 15 anos, além das atividades junto a NCA, presta consultoria ao Banco Mundial – BIRD e ao BID na fase de preparação e negociação de projetos junto a governos federal, estaduais e municipais.</span>
         </div>
       </div>
 
